Update for mermaid support

--- a/docs/_posts/2025-08-02-test.md
+++ b/docs/_posts/2025-08-02-test.md
@@ -1,6 +1,7 @@
 ---
 layout: post
 title: "Test post"
+mermaid: true
 ---
 
 # Title
@@ -13,3 +14,14 @@ title: "Test post"
 <!--
 some comments
 -->
+
+```mermaid
+graph TD;
+A-->B;
+A-->C;
+B-->D;
+C-->D;
+```
+
+
+
